# macronized-vulgate

./: .gitignore  README.md  temp
Psalmi/: 1.md  2.md
clementina-macronized-md/Psalms/: 6.md
clementina-vulgata/Psalms/: 3.md  4.md  5.md
macronized-json/Matthew/: 1.json  1.md
macronized-md/Psalms/: 1.md  2.md  3.md  4.md  5.md  6.md  (+1 more)
nova-macronized-md/: Liber Genesis.md  Liber Psalmorum.md  Psalms.md  wip40-150.md
nova-vulgata/: 00 - Ambiguous Forms.md  00a - Constitutio Apostolica.md  00b - Praefatio ad Lectorem.md  00c - Praenotanda.md  01 - Liber Genesis.md  02 - Liber Exodus.md  03 - Liber Leviticus.md  04 - Liber Numeri.md  05 - Liber Deuteronomii.md  06 - Liber Joseu.md  07 - Liber Judicum.md  08 - Liber Ruth.md  09 - Liber I Samuelis - TODO.md  09 - Liber I Samuelis.md  10 - Liber II Samuelis - TODO.md  10 - Liber II Samuelis.md  11 - Liber I Regum - TODO.md  11 - Liber I Regum.md  12 - Liber II Regum.md  13 - Liber I Paralipomenon - TODO.md  13 - Liber I Paralipomenon.md  14 - Liber II Paralipomenom - TODO.md  14 - Liber II Paralipomenom.md  15 - Liber Esdrae - TODO.md  15 - Liber Esdrae.md  16 - Liber Nehemiae - TODO.md  16 - Liber Nehemiae.md  17 - Liber Thobis - TODO.md  17 - Liber Thobis.md  18 - Liber Iudith - TODO.md  18 - Liber Iudith.md  19 - Liber Esther - TODO.md  19 - Liber Esther.md  20 - Liber Iob - TODO.md  20 - Liber Iob.md  21 - Liber Psalmorum.md  22 - Liber Proverbium.md  23 - Liber Ecclesiastes - TODO.md  23 - Liber Ecclesiastes.md  24 - Canticum Canticorum - TODO.md  (+109 more)
scripts/macronize/: Cargo.toml
scripts/macronize/src/: main.rs
(+5 files in other folders)
