[package]
name = "macronize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.16"
exitfailure = "0.5.1"
reqwest = { version = "0.12.5", features = ["json"] }
select = "0.6.0"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
